benchmarks/mesh/envoy-inbound-host.yaml
static_resources:
  listeners:
    - name: inbound
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 19090
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: inbound_http
                codec_type: HTTP1
                route_config:
                  name: inbound_route
                  virtual_hosts:
                    - name: target
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: target_app }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: target_app
      type: STATIC
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: target_app
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 19080
