benchmarks/mesh/envoy-outbound-host.yaml
static_resources:
  listeners:
    - name: outbound
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 19091
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: outbound_http
                codec_type: HTTP1
                route_config:
                  name: outbound_route
                  virtual_hosts:
                    - name: target
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: target_inbound
                            timeout: 2s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: target_inbound
      type: STATIC
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: target_inbound
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 19090
